--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,7 @@
 			<version>1.3.1</version>
 		</dependency>
 		
-			 	<dependency>
+		<dependency>
 			<groupId>org.codehaus.jackson</groupId>
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.3</version>
@@ -183,8 +183,16 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			<plugin>
+		        <groupId>org.apache.maven.plugins</groupId>
+		        <artifactId>maven-compiler-plugin</artifactId>
+		        <version>3.1</version>
+		        <configuration>
+		            <source>1.8</source>
+		            <target>1.8</target>
+		        </configuration>
+		    </plugin>
 		</plugins>
 	</build>
-
 
 </project>
