--- a/src/main/resources/system_conf.properties
+++ b/src/main/resources/system_conf.properties
@@ -1,7 +1,7 @@
 queryRefundStatusInterval =2
 
 #formal/debug
-environment=debug
+environment=formal
 #serverIP =http://192.168.199.140:8080
 serverIP =http://203.88.169.36
 
