修改上传图片BUG

--- a/src/main/resources/system_conf.properties
+++ b/src/main/resources/system_conf.properties
@@ -3,7 +3,7 @@ queryRefundStatusInterval =2
 #formal/debug
 environment=formal
 #serverIP =http://192.168.199.140:8080
-serverIP =http://203.88.169.36
+serverIP =http://www.internshiptour.com/
 
 saveImgPath = /var/www/internshiptour/Uploads/Avatar/
 #saveImgPath = D:/
