增加实习实践数据获取

--- a/src/main/resources/system_conf.properties
+++ b/src/main/resources/system_conf.properties
@@ -1,9 +1,9 @@
 queryRefundStatusInterval =2
 
 #formal/debug
-environment=formal
-#serverIP =http://192.168.199.140:8080
-serverIP =http://www.internshiptour.com
+environment=debug
+serverIP =http://192.168.0.230
+#serverIP =http://www.internshiptour.com
 
 saveImgPath = /var/www/internshiptour/Uploads/Avatar/
 #saveImgPath = D:/
